# tip-env

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  .pdm.toml  LICENSE  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
app/: __init__.py
config/: __init__.py  gunicorn.py
deploy/web/: Dockerfile  Dockerfile.prod
